# python-attach-decorator-sample

./: README.md  pyproject.toml
src/: __init__.py  main.py
src/decorators/: attach_decorator.py  auth.py
